--- a/dictionary_integration/style.css
+++ b/dictionary_integration/style.css
@@ -3,15 +3,19 @@
     margin: 0;
     box-sizing: border-box;
 }
+
 *:not(i) {
     font-family: "Poppins", sans-serif;
 }
+
 body {
     background-color: #ae9cff;
 }
+
 body:hover {
     background-color: rgb(209, 200, 248);
 }
+
 .container {
     background-color: #ffffff;
     width: 90vmin;
@@ -70,6 +74,7 @@ body:hover {
     color: #ffffff;
     border-radius: 5px;
 }
+
 .search-box button:hover {
     padding: 15px 0;
     width: 25%;
@@ -79,18 +84,22 @@ body:hover {
     color: #ffffff;
     border-radius: 5px;
 }
+
 .result {
     position: relative;
 }
+
 .result h3 {
     font-size: 30px;
     color: #100852;
 }
+
 .result .word {
     display: flex;
     justify-content: space-between;
     margin-top: 80px;
 }
+
 .result button {
     background-color: transparent;
     color: #ae9cff;
@@ -98,6 +107,7 @@ body:hover {
     outline: none;
     font-size: 18px;
 }
+
 .result .details {
     display: flex;
     gap: 10px;
@@ -105,9 +115,16 @@ body:hover {
     margin: 5px 0 20px 0;
     font-size: 14px;
 }
-.word-meaning {
+
+.result ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.result ul li p {
     color: #100852;
 }
+
 .word-example {
     color: #100852;
     font-style: italic;
@@ -115,19 +132,19 @@ body:hover {
     padding-left: 20px;
     margin-top: 30px;
 }
+
 .error {
     margin-top: 80px;
     text-align: center;
 }
 
-.container:hover .word-meaning  {
+.container:hover .word-meaning {
     color: #d1d4f7;
 }
 
 .container:hover .result h3 {
     color: #d1d4f7;
     font-size: 30px;
-    
 }
 
 .container:hover .word-example {
@@ -144,4 +161,13 @@ body:hover {
     color: #100852;
     margin: 5px 0 20px 0;
     font-size: 14px;
+}
+
+.result ul {
+    list-style-type: disc; /* or 'circle' or 'square' based on your preference */
+    padding: 0;
+}
+
+.result ul li {
+    padding-left: 20px; /* adjust as needed */
 }
