--- a/dictionary_integration/style.css
+++ b/dictionary_integration/style.css
@@ -12,9 +12,6 @@ body {
     background-color: #ae9cff;
 }
 
-body:hover {
-    background-color: rgb(209, 200, 248);
-}
 
 .container {
     background-color: #ffffff;
@@ -28,17 +25,6 @@ body:hover {
     box-shadow: 0 20px 40px rgba(38, 33, 61, 0.2);
 }
 
-.container:hover {
-    background-color: rgb(94, 93, 93);
-    width: 90vmin;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    padding: 80px 50px;
-    border-radius: 10px;
-    box-shadow: 0 20px 40px rgba(38, 33, 61, 0.2);
-}
 
 .search-box {
     width: 100%;
@@ -55,15 +41,6 @@ body:hover {
     font-size: 16px;
 }
 
-.search-box input:hover {
-    padding: 5px;
-    width: 70%;
-    border-radius: 10px;
-    background-color: #f0eeee;
-    outline: none;
-    border-bottom: 3px solid rgb(0, 183, 255);
-    font-size: 16px;
-}
 
 .search-box button {
     padding: 15px 0;
@@ -75,15 +52,6 @@ body:hover {
     border-radius: 5px;
 }
 
-.search-box button:hover {
-    padding: 15px 0;
-    width: 25%;
-    background-color: rgba(0, 110, 255, 0.678);
-    border: none;
-    outline: none;
-    color: #ffffff;
-    border-radius: 5px;
-}
 
 .result {
     position: relative;
@@ -138,29 +106,124 @@ body:hover {
     text-align: center;
 }
 
-.container:hover .word-meaning {
-    color: #d1d4f7;
+
+.result ul {
+    list-style-type: disc; /* or 'circle' or 'square' based on your preference */
+    padding: 0;
 }
 
-.container:hover .result h3 {
-    color: #d1d4f7;
+.result ul li {
+    padding-left: 20px; /* adjust as needed */
+}
+
+.dark-mode{
+    width: 100%;
+    height: 40px;
+    position: relative;
+    margin-bottom: 30px;
+}
+#toggle{
+    -webkit-appearance: none;
+    appearance: none;
+    height: 40px;
+    width: 75px;
+    background-color: #15181f;
+    position: absolute;
+    right: 0;
+    border-radius: 20px;
+    outline: none;
+    cursor: pointer;
+}
+#toggle:after{
+    content: "";
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    background-color: #ffffff;
+    top: 5px;
+    left: 7px;
+    border-radius: 50%;
+}
+
+.dark-theme{
+    background-color: #000000;
+    color: #e5e5e5;
+}
+.dark-theme #toggle{
+    background-color: #ffffff;
+}
+.dark-theme #toggle:after{
+    background-color: transparent;
+    box-shadow: 10px 10px #15181f;
+    top: -4px;
+    left: 30px;
+}
+
+.dark-theme .container{
+    background-color: #15181f;
+    color: #e5e5e5;
+    width: 90vmin;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    padding: 80px 50px;
+    border-radius: 10px;
+    box-shadow: 0 20px 40px rgba(38, 33, 61, 0.2);
+
+}
+
+.dark-theme .result {
+    position: relative;
+}
+
+.dark-theme .result h3 {
     font-size: 30px;
+    color: #ae9cff;
 }
 
-.container:hover .word-example {
-    color: #ced1f5;
+.dark-theme .result .word {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 80px;
+}
+
+.dark-theme .result button {
+    background-color: transparent;
+    color: #ae9cff;
+    border: none;
+    outline: none;
+    font-size: 18px;
+}
+
+.dark-theme .result .details {
+    display: flex;
+    gap: 10px;
+    color: #b3b6d4;
+    margin: 5px 0 20px 0;
+    font-size: 14px;
+}
+
+.dark-theme .result ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.dark-theme .result ul li p {
+    color: #ae9cff;
+}
+
+.dark-theme.word-example {
+    color: ae9cff;
     font-style: italic;
     border-left: 5px solid #ae9cff;
     padding-left: 20px;
     margin-top: 30px;
 }
 
-.container:hover .result .details {
-    display: flex;
-    gap: 10px;
-    color: #100852;
-    margin: 5px 0 20px 0;
-    font-size: 14px;
+.dark-theme.error {
+    margin-top: 80px;
+    text-align: center;
 }
 
 .result ul {
@@ -170,4 +233,15 @@ body:hover {
 
 .result ul li {
     padding-left: 20px; /* adjust as needed */
+    color: #ae9cff;
+}
+
+.dark-theme .result ul {
+    list-style-type: disc; /* or 'circle' or 'square' based on your preference */
+    padding: 0;
+}
+
+.dark-theme .result ul li {
+    padding-left: 20px; /* adjust as needed */
+    color: #ae9cff;
 }
